policies/kyverno-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: p8-require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Los pods deben ejecutarse sin privilegios de root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
